<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/clr_battle_background"
    tools:context=".NewGameSettings">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/new_game_settings_easy_sel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/lbl_acticity_new_game_settings_difficulty_easy"
            android:textColor="@color/clr_default_text" />

        <RadioButton
            android:id="@+id/new_game_settings_medium_sel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_acticity_new_game_settings_difficulty_medium"
            android:textColor="@color/clr_default_text" />

        <RadioButton
            android:id="@+id/new_game_settings_hard_sel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_acticity_new_game_settings_difficulty_hard"
            android:textColor="@color/clr_default_text" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_activity_new_game_settings_difficulty_title"
        android:textColor="@color/clr_default_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_activity_new_game_settings_difficulty_clr_title"
        android:textColor="@color/clr_default_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:id="@+id/new_game_settings_white_sel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/lbl_activity_new_game_settings_difficulty_clr_white"
            android:textColor="@color/clr_default_text" />

        <RadioButton
            android:id="@+id/new_game_settings_black_sel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_activity_new_game_settings_difficulty_clr_black"
            android:textColor="@color/clr_default_text" />
    </RadioGroup>

    <Button
        android:id="@+id/activity_new_game_settings_start"
        android:layout_width="124dp"
        android:layout_height="68dp"
        android:text="@string/lbl_new_game_settings_start_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />
</androidx.constraintlayout.widget.ConstraintLayout>